--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Debug the World",
     "subTitle":"欢迎访问",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/102972242?s=400&u=f671b253b161051534b773360255cfe831bbdcae&v=4",
     "GMEEK_VERSION":"last"
 }
